--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout llvm
         uses: actions/checkout@v2
         with:
-          repository: https://github.com/llvm/llvm-project.git
+          repository: llvm/llvm-project
           ref: "11.0.1"
           path: 'llvm'
       
