--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: llvm/llvm-project
-          ref: "11.0.1"
+          ref: "llvmorg-11.0.1"
           path: 'llvm'
       
 
