--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
           cmake `
             -S ".\llvm\llvm" `
             -B ".\build `
-            -G "Visual Studio 16 2019 `
+            -G "Visual Studio 16 2019" `
             -Thost=x64 `
             -A x64 `
             -DLLVM_ENABLE_PROJECTS="lld;clang" `
