--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,14 +44,13 @@ jobs:
           mkdir install
           cmake `
             -S ".\llvm\llvm" `
-            -B ".\build `
+            -B ".\build" `
             -G "Visual Studio 16 2019" `
             -Thost=x64 `
             -A x64 `
             -DLLVM_ENABLE_PROJECTS="lld;clang" `
             -DCMAKE_BUILD_TYPE=Release `
-            -DCMAKE_INSTALL_PREFIX=".\install" 
-            #-DLLVM_ENABLE_ASSERTIONS=ON
+            -DCMAKE_INSTALL_PREFIX=".\install"
           cmake --build .\build --target INSTALL --config Release
       
       - name: Upload artifacts
