--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: llvm/llvm-project
-          ref: "llvmorg-$llvm_version"
+          ref: "llvmorg-${{ env.llvm_version }}"
           path: 'llvm'
       
 
@@ -54,12 +54,12 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release `
             -DCMAKE_INSTALL_PREFIX=".\install"
           cmake --build .\build --target INSTALL --config Release
-          7z a -mx9 "llvm-$llvm_version-windows-x64.7z" ".\install\*"
+          7z a -mx9 "llvm-${{ env.llvm_version }}-windows-x64.7z" ".\install\*"
 
       
       - name: Upload artifacts
         uses: actions/upload-artifact@v2.2.4
         with:
-          path: llvm-$llvm_version-windows-x64.7z
+          path: llvm-${{ env.llvm_version }}-windows-x64.7z
         
 
